# adminservice/internal/entity/season_model.go
@@ -24,14 +24,14 @@ func (s *Season) ToDTO() SeasonOut {
 }
 
 type SeasonJson struct {
-	StartDate string `json:"start-date" example:"2024-06-01" format:"date" validate:"required,datetime=2006-01-02"`
-	EndDate   string `json:"end-date" example:"2024-08-31" format:"date" validate:"required,datetime=2006-01-02"`
+	StartDate string `json:"start-date" example:"01-06-2024" format:"date" validate:"required,datetime=02-01-2006"`
+	EndDate   string `json:"end-date" example:"31-08-3034" format:"date" validate:"required,datetime=02-01-2006"`
 }
 
 type DetailSeasonJson struct {
 	SeasonJson
-	StartTime string `json:"start-time" example:"09:00:00" format:"time" validate:"required,datetime=15:04:05"`
-	EndTime   string `json:"end-time" example:"18:00:00" format:"time" validate:"required,datetime=15:04:05"`
+	StartTime string `json:"start-time" validate:"required`
+	EndTime   string `json:"end-time" validate:"required`
 	Fund      uint   `json:"fund" example:"5000" minimum:"0" validate:"gte=0"`
 }
 
